<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EISEARCH</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">SEARCH</string>
    <string name="sw1_hint">Enter title</string>
    
    <string name="acNumber">Accession number</string>
    <string name="title">Title</string>
    <string name="authors">Authors</string>
    <string name="docType">Document type</string>
    <string name="conName">Conference name</string>

    <string name="menu_search">积分查询</string>
    <string name="menu_getscore">积分获取</string>
    <string name="feedback">用户反馈</string>
    
    
    
</resources>